fix: multidropdown window height and overflow

--- a/src/Shared/Components/MultiDropdown/styleMultiDropdown.module.scss
+++ b/src/Shared/Components/MultiDropdown/styleMultiDropdown.module.scss
@@ -13,8 +13,8 @@
   &__window {
     width: 100%;
     max-width: 226px;
-    height: auto;
-    min-height: 24px;
+    height: 24px;
+    max-height: 24px;
     position: relative;
     overflow: hidden;
     padding: 4px 0 4px 8px;
